# jianwei

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  container.config.json  pyproject.toml
docs/: 2026-07-09-cloudrun-backend-plan.md  2026-07-09-cloudrun-backend-spec.md
src/jianwei/: __init__.py  config.py
src/jianwei/agent/: prompts.py  runner.py  tools.py
src/jianwei/alerts/: rules.py
src/jianwei/analysis/: __init__.py  report.py  segments.py  session.py  waveform.py
src/jianwei/api/: __init__.py  main.py
src/jianwei/notify/: wechat.py
src/jianwei/radar/: __init__.py  r60abd1.py  simulator.py
src/jianwei/storage/: __init__.py  agent_store.py  alert_store.py  device_store.py  factory.py  jsonl_store.py  mysql_store.py  sample_store.py
static/: index.html
tests/: conftest.py  test_agent_api.py  test_agent_tools.py  test_alert_rules.py  test_api.py  test_cloudrun_deployment.py  test_config.py  test_device_api.py  test_environment.py  test_jsonl_store.py  test_mysql_datetime.py  test_mysql_store.py  test_preview_static.py  test_r60abd1_parser.py  test_radar_ingest_api.py  test_report_algorithm.py  test_segments.py  test_simulator.py  test_waveform_analysis.py
